# vinylsplit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  scratch.py  vinylsplit_1.0.0~beta1-1_all.deb
.github/ISSUE_TEMPLATE/: copilot-instruction.md
.pybuild/cpython3_3.14/: setuptools-build_ext-parallel.cfg  vinylsplit-0.9.1-py3-none-any.whl
.pybuild/cpython3_3.14/scripts/: vinylsplit
debian/: changelog  control  debhelper-build-stamp  files  install  rules
debian/vinylsplit/DEBIAN/: control  md5sums
docs/: ARCHITECTURE.md  Adaptive Metadata Refinement.md  IDENTIFICATION.MD  METADATA_VERIFIER_DESIGN.md  ROADMAP.md  VISION.md
output_gui_phase1_smoke/Album/: 02 Track.flac
packaging/flatpak/: io.github.pasleyjb.VinylSplit.yml  io.github.pasleyjb.VinylSplit.yml.bak  python-dependencies.json
packaging/linux/: vinylsplit.desktop
src/vinylsplit/: adaptive_analysis.py  album_identifier.py  album_resolver.py  audio.py  boundary_optimizer.py  boundary_states.py  boundary_validation.py  cli.py  config.py  detection.py  embedder.py  fingerprint.py  formatting.py  identifier.py  lookup.py  metadata.py  models.py  pipeline.py  resolver.py  retry_generator.py  review_candidate.py  review_session.py  review_state.py  silence_region.py  smart_identifier.py  splitter.py  suggestions.py  timestamps.py  utils.py
src/vinylsplit/analysis/: __init__.py  boundaries.py  report.py  rms.py  silence.py
src/vinylsplit/application/: __init__.py
src/vinylsplit/gui/: __init__.py  __main__.py  app.py  main_window.py  state.py  theme.py  workspace_manager.py
(+68 files in other folders)
