[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vinylsplit"
version = "0.9.0"
description = "Drag & Drop Automated Music Organization"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Justin Pasley" }
]

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
    "requests>=2.32",
    "python-dotenv>=1.2",
    "soundfile>=0.13",
    "numpy>=2.3",
    "scipy>=1.16",
    "mutagen>=1.47",
    "pyacoustid>=1.3",
    
]

[project.scripts]
vinylsplit = "vinylsplit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
